force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/cgcloud__Inventory_Control_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the inventory control template,  to be used for inventories.</description>
    <label>Inventory Control Template</label>
    <nameField>
        <label>Inventory Control Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Control Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>