force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Description_Language_4__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_4__c</fullName>
    <label>Description Language 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>