force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Inventory_Control_Measure__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Control_Measure__c</fullName>
    <label>Inventory Control Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qty/Consumer Unit</fullName>
                <default>true</default>
                <label>Qty/Consumer Unit</label>
            </value>
            <value>
                <fullName>Qty/Order Unit</fullName>
            </value>
            <value>
                <fullName>Value/Domestic Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>