force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Period_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Period_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Period Policy</label>
    <type>Checkbox</type>
</CustomField>