force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Period_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Period_Type__c</fullName>
    <label>Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year</fullName>
                <default>true</default>
                <label>Year</label>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Segment</fullName>
            </value>
            <value>
                <fullName>Period</fullName>
            </value>
            <value>
                <fullName>Sales Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>