force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quota_Type__c</fullName>
    <label>Quota Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer Quota</fullName>
                <default>true</default>
                <label>Transfer Quota</label>
            </value>
            <value>
                <fullName>Reception Quota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>