force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Use_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Description</label>
    <type>Checkbox</type>
</CustomField>