force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/fields/cgcloud__Vehicle_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vehicle_Policy__c</fullName>
    <label>Vehicle Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>