force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/recordTypes/cgcloud__Inventory.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Inventory</fullName>
    <active>true</active>
    <label>Inventory</label>
</RecordType>