force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/recordTypes/cgcloud__Quota.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Quota</fullName>
    <active>true</active>
    <label>Quota</label>
</RecordType>