force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/validationRules/cgcloud__Validate_Policies_Cash_Float.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Policies_Cash_Float</fullName>
    <active>true</active>
    <description>At least one of the User Policy, Tour Policy or Vehicle Policy must be &apos;One&apos;.</description>
    <errorConditionFormula>AND
          (
          RecordType.DeveloperName = &apos;Cash_Float&apos;,
          ISPICKVAL(cgcloud__User_Policy__c, &quot;None&quot;),
          ISPICKVAL(cgcloud__Tour_Policy__c, &quot;None&quot;),
          ISPICKVAL(cgcloud__Vehicle_Policy__c, &quot;None&quot;)
          )</errorConditionFormula>
    <errorMessage>At least one of the User Policy, Tour Policy or Vehicle Policy must be &apos;One&apos;.</errorMessage>
</ValidationRule>