force-app/main/default/objects/cgcloud__Inventory_Control_Template__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cgcloud__User_Policy__c</columns>
    <columns>cgcloud__Customer_Policy__c</columns>
    <columns>cgcloud__Product_Policy__c</columns>
    <columns>cgcloud__Tour_Policy__c</columns>
    <columns>cgcloud__Vehicle_Policy__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>